Added a bit of machinery to prevent an infinite computation, as shown by Store_0; 9 failing 468/477